fixed the sections overlapping issues on smaller devices and removed the read more button from the story section.

--- a/dogpak-landing-page/styles/Advantages.module.css
+++ b/dogpak-landing-page/styles/Advantages.module.css
@@ -77,3 +77,15 @@
         width: 100%;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .advantageImage {
+        height: 300px;
+    }
+    #image_1 {
+        object-position: -600px;
+    }
+    #image_2 {
+        object-position: -350px;
+    }
+}
