--- a/dogpak-landing-page/styles/CTA.module.css
+++ b/dogpak-landing-page/styles/CTA.module.css
@@ -4,8 +4,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding: 15rem 0;
+    /*justify-content: space-between;*/
+    justify-content: center;
+    /*padding: 15rem 0;*/
     gap: 2rem;
 }
 
@@ -73,7 +74,7 @@
 
 @media screen and (max-width: 960px) {
     .holder {
-        padding: 5rem 1rem;
+        padding: 1rem;
     }
 
     .text {
@@ -100,7 +101,7 @@
     }
 
     .holder {
-        padding: 12.5rem 1rem;
+        justify-content: center;
     }
 
     .emailInput {
