--- a/dogpak-landing-page/styles/EmailInput.module.css
+++ b/dogpak-landing-page/styles/EmailInput.module.css
@@ -12,6 +12,7 @@
     font-size: 16px;
 
     border: none;
+    border-radius: 0;
     border-bottom: 5px solid #C76A49;
     flex: 1;
     color: white;
@@ -19,6 +20,7 @@
 }
 
 .submitButton {
+    border-radius: 0;
     border: none;
     border-bottom: 5px solid #C76A49;
     background-color: transparent;
@@ -26,4 +28,19 @@
     font-size: 20px;
     color: white;
     cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+    .emailInput, .submitButton {
+        font-size: 14px;
+        border-width: 3px;
+    }
+
+    .emailInput {
+        font-size: 12px;
+    }
+
+    .emailInput {
+        padding: 5px 5px 5px 0;
+    }
 }
