--- a/dogpak-landing-page/styles/Hero.module.css
+++ b/dogpak-landing-page/styles/Hero.module.css
@@ -68,4 +68,17 @@
         content: "\a";
         white-space: pre;
     }
+
+    .heading > span {
+        font-size: 38px;
+    }
+
+    .content > p {
+        margin: 0;
+        font-size: 14px;
+        line-height: 24px;
+    }
+    .fundedText {
+        font-size: 12px !important;
+    }
 }
